[package]
authors = ["mdrokz <mohammadmunshi@gmail.com>", "runvnc <runvnc@gmail.com>"]
name = "llama_cpp_rs"
description = "Rust bindings for LLAMA.CPP inference"
categories = [
    "api-bindings",
    "development-tools::ffi",
    "development-tools::build-utils",
    "science",
]
keywords = [
    "machine-learning",
    "api-bindings",
    "llama",
    "llama-cpp",
    "inference",
]
exclude = ["/examples", "/example_test"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mdrokz/rust-llama.cpp"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
lazy_static = "1.4.0"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread"] }
libc = "0.2"

[build-dependencies]
cc = "1.0.79"
bindgen = "0.66.1"

[lib]
name = "llama_cpp_rs"
path = "src/lib.rs"

[features]
opencl = []
cuda = []
metal = []
openblas = []
blis = []
